fix buttons on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,7 +328,7 @@ p {
   @media screen and (max-width: 575px) {
 
     .box {
-        width: 375px;
+        width: 358px;
     }
 
 }
